test/libsolidity/syntaxTests/inlineAssembly/function_definition.sol
contract C {
  function f() pure public {
    assembly {
      function f (a, b  , c ) ->    y,x,z {
      }
    }
  }
}
// ----
// SyntaxError 1184: (46-114): Inline assembly is not supported in IELE. For more information, including potential workarounds, see README-IELE-SUPPORT.md
